text-field: Prevent text from covering label

--- a/packages/mdui/src/components/text-field/style.less
+++ b/packages/mdui/src/components/text-field/style.less
@@ -334,9 +334,21 @@
   }
 }
 
-:host([variant="filled"]) .label + .input {
-  .padding-top(22);
-  .padding-bottom(6);
+textarea.input {
+  padding-top: 0;
+  .margin-top(14);
+}
+
+:host([variant="filled"]) .label {
+  + .input {
+    .padding-top(22);
+    .padding-bottom(6);
+  }
+
+  + textarea.input {
+    padding-top: 0;
+    .margin-top(22);
+  }
 }
 
 .supporting {
